[package]
name = "mini_redis"
version = "0.1.0"
edition = "2021"


[[bin]]
name = "cli"
path = "src/bin/cli.rs"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[dependencies]
async-stream = "0.3.6"
atoi = "2.0.0"
bytes = "1.9.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.41"
tokio-stream = "0.1.17"
clap = { version = "4.5.28", features = ["derive"] }